force-app/main/default/objects/SalesOrderProduct__c/SalesOrderProduct__c.object-meta.xml
<CustomObject>
    <label>Goods S/O+Product</label>
    <nameField>
        <displayFormat>GSPD-{000000}</displayFormat>
        <label>GOODS S/O+PRODUCT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods S/O+Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>