force-app/main/default/objects/SalesOrderProduct__c/fields/AmountOfSellingTax__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSellingTax__c</fullName>
    <label>AMOUNT OF SELLING TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>