force-app/main/default/objects/SalesOrderProduct__c/fields/AmountOfSellingTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSellingTaxFCY__c</fullName>
    <label>Amount of Selling Tax(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>