force-app/main/default/objects/SalesOrderProduct__c/fields/AutoCreateTRSBill__c.field-meta.xml
<CustomField>
    <fullName>AutoCreateTRSBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create TRS Bill</label>
    <type>Checkbox</type>
</CustomField>