force-app/main/default/objects/SalesOrderProduct__c/fields/BillingType__c.field-meta.xml
<CustomField>
    <fullName>BillingType__c</fullName>
    <formula>text( ProductID__r.BillingType__c )</formula>
    <label>BILLING TYPE</label>
    <type>Text</type>
</CustomField>