force-app/main/default/objects/SalesOrderProduct__c/fields/BillUpdateStatus__c.field-meta.xml
<CustomField>
    <fullName>BillUpdateStatus__c</fullName>
    <label>Bill Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillUpdateStatus</valueSetName>
    </valueSet>
</CustomField>