force-app/main/default/objects/SalesOrderProduct__c/fields/Charge_Unit__c.field-meta.xml
<CustomField>
    <fullName>Charge_Unit__c</fullName>
    <label>Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitType</valueSetName>
    </valueSet>
</CustomField>