force-app/main/default/objects/SalesOrderProduct__c/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount Rate%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>