force-app/main/default/objects/SalesOrderProduct__c/fields/FinalNetWeight__c.field-meta.xml
<CustomField>
    <fullName>FinalNetWeight__c</fullName>
    <label>FINAL NET WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>