force-app/main/default/objects/SalesOrderProduct__c/fields/ForeignCurrency__c.field-meta.xml
<CustomField>
    <fullName>ForeignCurrency__c</fullName>
    <label>Foreign Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>