force-app/main/default/objects/SalesOrderProduct__c/fields/GoodSalesOrderID__c.field-meta.xml
<CustomField>
    <fullName>GoodSalesOrderID__c</fullName>
    <label>GOODS SALES ORDER ID</label>
    <referenceTo>SALES_ORDER__c</referenceTo>
    <relationshipName>GoodsSalesOrderID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>