force-app/main/default/objects/SalesOrderProduct__c/fields/ListPriceAfterDiscountFCY__c.field-meta.xml
<CustomField>
    <fullName>ListPriceAfterDiscountFCY__c</fullName>
    <label>List Price after Discount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>