force-app/main/default/objects/SalesOrderProduct__c/fields/ListPriceBeforeDiscountLocal__c.field-meta.xml
<CustomField>
    <fullName>ListPriceBeforeDiscountLocal__c</fullName>
    <label>List Price before Discount(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>