force-app/main/default/objects/SalesOrderProduct__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plan__c.Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.ProductID__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>GOODS S/O+PRODUCT</relationshipLabel>
    <relationshipName>GoodsSOProduct</relationshipName>
    <type>Lookup</type>
</CustomField>