force-app/main/default/objects/SalesOrderProduct__c/fields/PlannedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PlannedQuantity__c</fullName>
    <label>PLAN QUANTITY</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>