force-app/main/default/objects/SalesOrderProduct__c/fields/ProductQRCodeImage__c.field-meta.xml
<CustomField>
    <fullName>ProductQRCodeImage__c</fullName>
    <formula>ProductID__r.QR_Image__c</formula>
    <label>PRODUCT QR CODE IMAGE</label>
    <type>Text</type>
</CustomField>