force-app/main/default/objects/SalesOrderProduct__c/fields/ProductStock__c.field-meta.xml
<CustomField>
    <fullName>ProductStock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product(Stock)</label>
    <referenceTo>Product_Stock__c</referenceTo>
    <relationshipLabel>GOODS S/O+PRODUCT</relationshipLabel>
    <relationshipName>GOODS_S_O_PRODUCT</relationshipName>
    <type>Lookup</type>
</CustomField>