force-app/main/default/objects/SalesOrderProduct__c/fields/SellingAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>SellingAmountInclTax__c</fullName>
    <label>SELLING AMOUNT INCL TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>