force-app/main/default/objects/SalesOrderProduct__c/fields/SellingUnitPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>SellingUnitPriceFCY__c</fullName>
    <inlineHelpText>In case The Product is Unit Base, Selling Unit Price(FCY)=Standard Selling Unit Price(FCY)
In case The Product is Weight Base, Selling Unit Price(FCY)=Standard Selling Unit Price(FCY)/Kg or Gram</inlineHelpText>
    <label>Selling Unit Price(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>