force-app/main/default/objects/SalesOrderProduct__c/fields/SellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>SellingUnitPriceLocal__c</fullName>
    <inlineHelpText>In case The Product is Unit Base, Selling Unit Price(Local)=Standard Selling Unit Price(Local)
In case The Product is Weight Base, Selling Unit Price(Local)=Standard Selling Unit Price(Local)/Kg or Gram</inlineHelpText>
    <label>Selling Unit Price(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>