force-app/main/default/objects/SalesOrderProduct__c/fields/SellingWeightUnit__c.field-meta.xml
<CustomField>
    <fullName>SellingWeightUnit__c</fullName>
    <formula>text(ProductID__r.WeightUnit__c)</formula>
    <label>SELLING WEIGHT UNIT</label>
    <type>Text</type>
</CustomField>