force-app/main/default/objects/SalesOrderProduct__c/fields/ShippingTypeAtWarehouse__c.field-meta.xml
<CustomField>
    <fullName>ShippingTypeAtWarehouse__c</fullName>
    <label>SHIPPING TYPE AT WAREHOUSE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitType</valueSetName>
    </valueSet>
</CustomField>