force-app/main/default/objects/SalesOrderProduct__c/fields/Total_Selling__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling__c</fullName>
    <formula>FinalQuantity__c * SellingUnitPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>