force-app/main/default/objects/SalesOrderProduct__c/fields/TotalAmountOfSelling__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSelling__c</fullName>
    <label>TOTAL AMOUNT OF SELLING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>