force-app/main/default/objects/SalesOrderProduct__c/fields/TotalStockOnhand__c.field-meta.xml
<CustomField>
    <fullName>TotalStockOnhand__c</fullName>
    <label>Total Stock On-hand</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>