force-app/main/default/objects/SalesOrderProduct__c/fields/TrsBill__c.field-meta.xml
<CustomField>
    <fullName>TrsBill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRS BILL</label>
    <referenceTo>TRSBill__c</referenceTo>
    <relationshipLabel>GOODS S/O+PRODUCT</relationshipLabel>
    <relationshipName>GoodsSOProduct</relationshipName>
    <type>Lookup</type>
</CustomField>