force-app/main/default/objects/SalesOrderProduct__c/validationRules/Total_Stock_On_hand_less_than_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Stock_On_hand_less_than_Qty</fullName>
    <active>true</active>
    <errorConditionFormula>FinalQuantity__c &gt; TotalStockOnhand__c</errorConditionFormula>
    <errorMessage>The Stock on-hand of this product is not enough. Please check Inventory report again or Q&apos;ty requested.</errorMessage>
</ValidationRule>